<resources>

    <string name="oauth_client_id">932997240603-j0ssfim0ducsulsa02gar6i102l1vqvf.apps.googleusercontent.com</string>
    <string name="facebook_app_id">626107437580125</string>
    <string name="app_name">MeetUs</string>
    <string name="title_activity_main">MeetUs</string>

    <string name="title_new_event">Create Event</string>
    <string name="title_history">History</string>
    <string name="title_ongoing_event">Ongoing Event</string>
    <string name="title_setting">Setting</string>
    <string name="title_about">About</string>

    <string name="navbar_new_event">Create Event</string>
    <string name="navbar_history">History</string>
    <string name="navbar_ongoing_event">Ongoing Event</string>
    <string name="navbar_chat">Chat</string>
    <string name="navbar_setting">Setting</string>
    <string name="navbar_about">About</string>

    <string name="sort_menu_by_distance">Sort by Distance</string>
    <string name="sort_menu_by_popularity">Sort by Popularity</string>
    <string name="sort_menu_by_name">Sort by Name</string>

    <string name="profile_description">Description</string>
    <string name="profile_record">Record</string>
    <string name="profile_joined_event">Joined Event: </string>
    <string name="profile_absent_event">Absent Event: </string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>

    <string name="profile_no_description">No Description Yet</string>
    <string name="profile_no_phone">No Phone Number Yet</string>

    <string name="new_event_name_hint">Event Name</string>
    <string name="new_event_venue_hint">Venue</string>
    <string name="new_event_description_hint">Description</string>
    <string name="new_event_minppl_hint">Min People</string>
    <string name="new_event_maxppl_hint">Max People</string>
    <string name="new_event_start_time">Event Start Time</string>
    <string name="new_event_start_time_hint">Click to set time</string>
    <string name="new_event_deadline_time">Event Deadline Time</string>
    <string name="new_event_deadline_time_hint">Click to set time</string>

    <string name="self_rate_skip_dialog_title">Skip</string>
    <string name="self_rate_skip_dialog_message">really?</string>

    <string name="set_not_attended_dialog_title">Attendance</string>
    <string name="set_not_attended_dialog_message">Do you really want to change this user\'s attendance?</string>

    <string name="ok">OK</string>
    <string name="cancel">cancel</string>

    <string name="btn_create">Create</string>
    <string name="btn_join">Join this Event</string>
    <string name="btn_quit">Quit this Event</string>
    <string name="btn_delete">Cancel this Event</string>

    <string name="setting_language_item">Language</string>


    <!--string for personality-->

    <string name="extraversion">Extraversion</string>
    <string name="agreeableness">Agreeableness</string>
    <string name="conscientiousness">Conscientiousness</string>
    <string name="openness">Openness</string>
    <string name="neuroticism">Neuroticism</string>
    <string name="outgoing">Outgoing</string>
    <string name="enthusiastic">Enthusiastic</string>
    <string name="active">Active</string>

    <string name="aloof">Aloof</string>
    <string name="quiet">Quiet</string>
    <string name="independent">Independent</string>

    <string name="trusting">Trusting</string>
    <string name="empathetic">Empathetic</string>
    <string name="compliant">Compliant</string>

    <string name="uncooperative">Uncooperative</string>
    <string name="unempathetic">Unempathetic</string>
    <string name="hostile">Unfriendly</string>

    <string name="organized">Organized</string>
    <string name="selfDirected">Self-discipline</string>
    <string name="dependable">Dependable</string>

    <string name="spontaneous">Spontaneous</string>
    <string name="careless">Careless</string>
    <string name="proneToAddiction">Prone to addiction</string>

    <string name="irritable">Irritable</string>
    <string name="moody">Moody</string>

    <string name="stable">Stable</string>
    <string name="relaxed">Relaxed</string>

    <string name="openToNewExperiences">Open to new experiences</string>
    <string name="curious">Curious</string>
    <string name="creative">Creative</string>
    <string name="imaginative">Imaginative</string>

    <string name="practical">Practical</string>
    <string name="conventional">Conventional</string>
    <string name="skeptical">Skeptical</string>
    <string name="rational">Rational</string>

    <string-array name="floatingChatModeSpinner">
        <item>Auto</item>
        <item>Custom</item>
    </string-array>

    <string name = "deadline">Deadline</string>
    <string name = "logout">LOGOUT</string>
    <string name = "chat">Chat</string>
    <string name = "floatingChatMenu">Floating Chat Menu</string>
    <string name = "detail">Detail</string>
    <string name = "people">People</string>
    <string name = "event">Event</string>
    <string name = "editProfile">Edit Profile</string>
    <string name = "userNameOrEmail">Username / Email</string>
    <string name = "password">Password</string>
    <string name = "forgetPassword">Froget Password?</string>
    <string name = "login">LOGIN</string>
    <string name = "signUp">Don\'t have an account? Sign up</string>
    <string name = "register">Register</string>
    <string name = "loginInformation">Login Information</string>
    <string name = "username">Username</string>
    <string name = "email">Email</string>
    <string name = "enterPasswordAgain">Enter Password Again</string>


    <string name = "personalInformation">Personal Information</string>
    <string name = "firstName">First Name</string>
    <string name = "lastName">Last Name</string>
    <string name = "nickName">Nick Name</string>
    <string name = "gender">Gender</string>
    <string name = "male">Male</string>
    <string name = "female">Female</string>
    <string name = "phoneNum">Phone Number</string>
    <string name = "description">Describe yourself</string>
    <string name = "submit">SUBMIT</string>

    <string name = "forgetPasswordTitle">Forget Password</string>
    <string name = "enterYourEmail">Enter Your Email</string>

    <string name = "selfPersonalityTesting">Self Personality Testing</string>
    <string name = "selfPersonalityTestingQuestion">How do the following sentences describe you?</string>
    <string name = "selfPersonalityTestingQuestion1">1. I am reserved.</string>
    <string name = "selfPersonalityTestingQuestion2">2. I am generally trusting.</string>
    <string name = "selfPersonalityTestingQuestion3">3. I tend to be lazy.</string>
    <string name = "selfPersonalityTestingQuestion4">4. I am relaxed, handle stress well.</string>
    <string name = "selfPersonalityTestingQuestion5">5. I have few artistic interests.</string>
    <string name = "selfPersonalityTestingQuestion6">6. I am outgoing, sociable.</string>
    <string name = "selfPersonalityTestingQuestion7">7. I tend to find fault with others.</string>
    <string name = "selfPersonalityTestingQuestion8">8. I do a thorough job.</string>
    <string name = "selfPersonalityTestingQuestion9">9. I get nervous easily.</string>
    <string name = "selfPersonalityTestingQuestion10">10. I have an active imagination.</string>

    <string name = "home">Home</string>
    <string name = "applyChanges">Apply Changes</string>
    <string name = "youHaveNoHistory">You don\'t have any history</string>
    <string name = "youHaveNotJoinedAnyEvent">You haven\'t joined any event yet</string>

    <string name = "ratingFullForm">"O: Openness to experience\nN: Neuroticism\nA: Agreeableness\nE: Extraversion\nC: Conscientiousness"</string>






</resources>
